# gotoh-seqalign

./: Cargo.toml
benches/: matrices.rs
src/: lib.rs
