[package]
name = "gotoh"
version = "0.1.0"
authors = ["MrNbaYoh <mrnbayoh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rayon = "1"
#ndarray = { version = "0.15", features = ["rayon"] }
ndarray = "0.15"
criterion = "0.3"

[[bench]]
name = "matrices"
harness = false
